trunk/timeware/src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Age_Of_Employee__c</fullName>
        <description>Based on Employee&apos;s Birth Date</description>
        <formula>IF(ISBLANK(Birth_Date__c),0,FLOOR((TODAY()-Birth_Date__c)/365.2425))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Of Employee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Badge_Number__c</fullName>
        <label>Badge Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Class__c</fullName>
        <label>Employee Class</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly Full Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly Temporary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary Non-Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>IF(AND(ISNULL(Last_Name__c ), ISNULL(First_Name__c )), 
null, 
IF(ISNULL(Last_Name__c ), TRIM(First_Name__c), TRIM(Last_Name__c) &amp; &quot;, &quot; &amp; TRIM(First_Name__c)) 
)</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_Period_Policy__c</fullName>
        <label>Pay Period Policy</label>
        <referenceTo>Pay_Period_Policy__c</referenceTo>
        <relationshipLabel>Pay Period Policies</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_Period_Select__c</fullName>
        <label>Pay Period Select</label>
        <picklist>
            <picklistValues>
                <fullName>Previous Pay Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Pay Period</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Next Pay Period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pay_Rate__c</fullName>
        <label>Pay Rate</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Substitute_User_Effective_Date__c</fullName>
        <label>Substitute User Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Substitute_User_Expiration_Date__c</fullName>
        <label>Substitute User Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Substitute_User__c</fullName>
        <label>Substitute User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>